--- a/core-customize/manifest.json
+++ b/core-customize/manifest.json
@@ -1,6 +1,12 @@
 {
     "commerceSuiteVersion": "2211.20",
     "enableImageProcessingService": true,
+    "extensionPacks": [
+    {
+            "name" : "hybris-commerce-integrations",
+		"version" : "2211.20"
+	}
+	],
     "extensions": [
         "cloudmediaconversion",
         "mediaconversionbackoffice"
