--- a/js-storefront/b2bspastore/angular.json
+++ b/js-storefront/b2bspastore/angular.json
@@ -49,7 +49,8 @@
               "src/styles/spartacus/checkout.scss",
               "src/styles/spartacus/storefinder.scss",
               "src/styles/spartacus/asm.scss",
-              "src/styles/spartacus/product.scss"
+              "src/styles/spartacus/product.scss",
+              "src/styles/spartacus/quote.scss"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -135,7 +136,8 @@
               "src/styles/spartacus/checkout.scss",
               "src/styles/spartacus/storefinder.scss",
               "src/styles/spartacus/asm.scss",
-              "src/styles/spartacus/product.scss"
+              "src/styles/spartacus/product.scss",
+              "src/styles/spartacus/quote.scss"
             ],
             "scripts": [],
             "stylePreprocessorOptions": {
