--- a/js-storefront/b2bspastore/package.json
+++ b/js-storefront/b2bspastore/package.json
@@ -37,6 +37,7 @@
     "@spartacus/order": "~2211.21.0",
     "@spartacus/pdf-invoices": "~2211.21.0",
     "@spartacus/product": "~2211.21.0",
+    "@spartacus/quote": "^2211.21.0",
     "@spartacus/setup": "~2211.21.0",
     "@spartacus/smartedit": "~2211.21.0",
     "@spartacus/storefinder": "~2211.21.0",
